# TASK-135

./: .gitignore  metadata.json  prompt.md
repo/backend/: Dockerfile  alembic.ini  conftest.py  cov.json  cov_api.json  pyproject.toml  requirements-dev.txt  requirements.txt
repo/backend/api_tests/: conftest.py  test_admin_config_routes_extra.py  test_admin_routes.py  test_auth_routes.py  test_config_routes.py  test_count_routes.py  test_count_routes_extra.py  test_e2e_workflows.py  test_error_envelopes.py  test_hmac_auth.py  test_integration_routes.py  test_inventory_routes.py  test_inventory_routes_extra.py  test_real_http.py  test_real_http_extra.py  test_relocation_routes.py  test_resource_routes.py  test_resource_routes_extra.py  test_schema_contracts.py  test_scope_enforcement.py  test_security_middleware.py  test_update_routes.py
repo/backend/data/install/: manifest.json
repo/backend/database/: schema_snapshot.sql
repo/backend/database/migrations/: env.py
repo/backend/database/seeds/: reference_data.sql
repo/backend/src/district_console/: __init__.py
repo/backend/unit_tests/: test_package_imports.py
repo/backend/unit_tests/application/: test_api_dependencies_middleware_extra.py  test_audit_service.py  test_auth_service.py  test_config_service.py  test_config_service_extra.py  test_count_router_branch_unit_extra.py  test_count_session_service.py  test_count_session_service_extra.py  test_integration_service.py  test_integration_service_extra.py  test_inventory_service.py  test_inventory_service_extra.py  test_rbac_service.py  test_relocation_service.py  test_resource_service.py  test_resource_service_extra.py  test_validation.py  (+7 more)
(+169 files in other folders)
